View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030888 | Open CASCADE | OCCT:Data Exchange | public | 2019-08-10 00:13 | 2019-08-17 12:24 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Android | ||
Product Version | 7.4.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030888: Data Exchange, RWGltf_CafReader - fix misprint in condition while iterating binary glTF 2.0 chunks | ||||
Description | The following line contains misprint leading to undefined behavior - aLen pointer should be unreferenced:if (int64_t(aFile.tellg()) + int64_t(sizeof(aChunkHeader2)) > int64_t(aLen)) | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR30888 has been created by kgv. SHA-1: 6962f67bc36cee1fcb13c99d97eaa45d9ebd5bb2 Detailed log of new commits: Author: kgv Date: Sat Aug 10 00:16:05 2019 +0300 0030888: Data Exchange, RWGltf_CafReader - fix misprint in condition while iterating binary glTF 2.0 chunks |
|
Branch CR30888 has been deleted by inv. SHA-1: 6962f67bc36cee1fcb13c99d97eaa45d9ebd5bb2 |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-08-10 00:13 | kgv | New Issue | |
2019-08-10 00:13 | kgv | Assigned To | => kgv |
2019-08-10 00:18 | git | Note Added: 0086132 | |
2019-08-10 09:07 | kgv | Assigned To | kgv => bugmaster |
2019-08-10 09:07 | kgv | Status | new => resolved |
2019-08-10 09:07 | kgv | Status | resolved => reviewed |
2019-08-10 09:08 | kgv | Relationship added | child of 0030691 |
2019-08-13 17:42 | bugmaster | Status | reviewed => tested |
2019-08-15 17:47 | bugmaster | Test case number | => Not required |
2019-08-17 12:07 | bugmaster | Changeset attached | => occt master 9975d32a |
2019-08-17 12:07 | bugmaster | Status | tested => verified |
2019-08-17 12:07 | bugmaster | Resolution | open => fixed |
2019-08-17 12:24 | git | Note Added: 0086304 |